@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-30T16:14:54Z",
-  "count_outdated" : 65,
-  "uniques_outdated" : 27,
+  "timestamp" : "2022-10-01T01:00:06Z",
+  "count_outdated" : 66,
+  "uniques_outdated" : 28,
   "count" : 67,
   "uniques" : 29,
   "views" : [
-    {
-      "timestamp": "2022-09-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-24T00:00:00Z",
       "count": 1,
