@@ -1,3 +1,11 @@
+2022-10-01T01:00:06Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3162580037
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 27 65 / 29 67
+* notice: next accum: outdated-unq outdated-all / unq all: 28 66 / 29 67
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-17] / []
+
 2022-09-30T16:14:54Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3160158969
 * notice: last 14d: unq all: 2 2
